[gd_scene load_steps=9 format=3 uid="uid://d4h4ifgnjne1k"]

[ext_resource type="Script" path="res://scenes/police_agent.gd" id="1_b5fe6"]
[ext_resource type="PackedScene" uid="uid://buxdnd1sa4ko5" path="res://assets/models/characters/character-male-c.glb" id="2_1hb1b"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_khwvh"]
radius = 0.22
height = 0.9

[sub_resource type="CylinderMesh" id="CylinderMesh_x06ik"]
top_radius = 10.0
bottom_radius = 10.0
height = 0.75

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a1041"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.113725)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_t6hx5"]
height = 0.75
radius = 10.0

[sub_resource type="BoxShape3D" id="BoxShape3D_7vt1h"]
size = Vector3(1, 0.5, 1.5)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hgxvj"]
height = 0.5
radius = 0.75

[node name="PoliceAgent" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 143
script = ExtResource("1_b5fe6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.432148, 0)
shape = SubResource("CapsuleShape3D_khwvh")

[node name="Body" parent="." instance=ExtResource("2_1hb1b")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.0134587, 0)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.604655, 0)
collision_layer = 0
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
mesh = SubResource("CylinderMesh_x06ik")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_a1041")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_t6hx5")

[node name="DodgeArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.604655, 0)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="DodgeArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.566929)
shape = SubResource("BoxShape3D_7vt1h")

[node name="BustArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="BustArea"]
shape = SubResource("CylinderShape3D_hgxvj")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="DodgeArea" to="." method="_on_dodge_area_body_entered"]
[connection signal="body_exited" from="DodgeArea" to="." method="_on_dodge_area_body_exited"]
[connection signal="body_entered" from="BustArea" to="." method="_on_bust_area_body_entered"]

[editable path="Body"]
